<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_task_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_marginBottom="5dp">

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/mn_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="20dp"
            android:paddingHorizontal="40dp">

            <TextView
                android:id="@+id/textView_titleX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_regular"
                android:text="@string/title"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView_title"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/lexend_regular"
                android:text="@string/title"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView_titleX"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_taskX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_regular"
                android:text="@string/task"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView_task"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView_task"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lexend_regular"
                android:text="@string/task_task_task_task"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView_taskX"
                app:layout_constraintTop_toBottomOf="@+id/textView_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>