<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/royal_blue"
    tools:context=".fragments.add.AddFragment">

    <!-- Gradient on whole screen -->
    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_top_to_bottom"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/azure"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22000003">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="30dp"
            android:paddingTop="36dp"
            android:paddingBottom="36dp">

            <TextView
                android:id="@+id/textView_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:text="@string/add_task"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:fontFamily="@font/lexend_bold"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="30dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editText_addTitle_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/enter_a_task_title"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_add">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_addTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lexend_regular"
                    android:maxLength="30" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editText_addTask_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/enter_a_task"
                app:counterEnabled="true"
                app:counterMaxLength="240"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_addTitle_layout">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_addTask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lexend_regular"
                    android:maxLength="240" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/btn_add"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="1dp"
        android:background="@drawable/btn_update_add"
        app:icon="@drawable/ic_update"
        app:iconGravity="end"
        android:text="@string/add"
        android:gravity="end|center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_back_add"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/btn_back_add"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_back"
        app:icon="@drawable/ic_back"
        android:fontFamily="@font/lexend_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:ignore="SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>