<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/royal_blue"
    android:orientation="vertical"
    tools:context=".fragments.list.ListFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_saiman_says_edition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2"
        tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/search_view_background"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/your_tasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        android:text="@string/your_tasks"
        android:textSize="28sp"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:fontFamily="@font/lexend_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <!-- Blue line between textView and recyclerView -->
    <View
        android:id="@+id/underline"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="12dp"
        android:background="@color/mn_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/your_tasks" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="18dp"
        android:clipToPadding="false"
        android:paddingBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/underline" />


        <!-- Gradient on whole screen to enhance the buttons on
        the bottom -->
        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_top_to_bottom"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

    <!-- info button and delete button put in a cardView -->
    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/royal_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
        app:layout_constraintEnd_toStartOf="@+id/fab_add">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/btn_info"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="1dp"
                android:background="@drawable/btn_info"
                app:icon="@drawable/ic_info"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_delete_all"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/btn_delete_all"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_delete"
                app:icon="@drawable/ic_delete"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:contentDescription="@string/add_todo"
        android:elevation="0dp"
        android:focusable="true"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/add_custom_task"
        android:focusable="true"
        android:src="@drawable/ic_task"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/fab_add"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_saiman_says"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/add_saiman_says"
        android:focusable="true"
        android:src="@drawable/ic_child"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/fab_add"
        app:layout_constraintEnd_toStartOf="@+id/btn_task" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_info"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="20dp"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="20dp">

            <View
                android:id="@+id/underline1"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/mn_blue"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="9dp" />

            <View
                android:id="@+id/underline2"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="8dp"
                android:background="@color/mn_blue"
                app:layout_constraintTop_toBottomOf="@+id/info_tv_add_custom"
                tools:layout_editor_absoluteX="9dp" />

            <View
                android:id="@+id/underline3"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="8dp"
                android:background="@color/mn_blue"
                app:layout_constraintTop_toBottomOf="@+id/info_tv_add_saiman"
                tools:layout_editor_absoluteX="16dp" />

            <View
                android:id="@+id/underline4"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="8dp"
                android:background="@color/mn_blue"
                app:layout_constraintTop_toBottomOf="@+id/info_tv_swipe_left"
                tools:layout_editor_absoluteX="16dp" />

            <View
                android:id="@+id/underline5"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="8dp"
                android:background="@color/mn_blue"
                app:layout_constraintTop_toBottomOf="@+id/info_tv_delete_all"
                tools:layout_editor_absoluteX="0dp" />

            <View
                android:id="@+id/underline6"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="8dp"
                android:background="@color/mn_blue"
                app:layout_constraintTop_toBottomOf="@+id/info_tv_long_press"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/info_tv_add_saiman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_regular"
                android:text="@string/add_saiman_says"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon_saiman" />

            <ImageView
                android:id="@+id/icon_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="64dp"
                android:src="@drawable/ic_task"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/icon_add"
                app:layout_constraintTop_toBottomOf="@+id/underline1"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/icon_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="8dp"
                android:paddingEnd="8dp"
                android:paddingStart="0dp"
                android:src="@drawable/ic_add"
                app:layout_constraintEnd_toStartOf="@+id/icon_task"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/underline1"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/info_tv_add_custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/lexend_regular"
                android:text="@string/add_custom_task2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon_task" />

            <ImageView
                android:id="@+id/icon_add2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="8dp"
                android:paddingEnd="8dp"
                android:paddingStart="0dp"
                android:src="@drawable/ic_add"
                app:layout_constraintEnd_toStartOf="@+id/icon_saiman"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/underline2"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/icon_saiman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="64dp"
                android:src="@drawable/ic_child"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/icon_add2"
                app:layout_constraintTop_toBottomOf="@+id/underline2"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/delete_sweep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="64dp"
                android:src="@drawable/ic_delete_sweep_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/icon_swipe_left"
                app:layout_constraintTop_toBottomOf="@+id/underline3"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/icon_swipe_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_back"
                app:layout_constraintEnd_toStartOf="@+id/delete_sweep"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/underline3"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/info_tv_swipe_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_regular"
                android:text="@string/swipe_left_on_task_to_delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon_swipe_left" />

            <ImageView
                android:id="@+id/icon_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/underline4"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/info_tv_delete_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/lexend_regular"
                android:text="@string/clear_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon_delete" />

            <ImageView
                android:id="@+id/icon_long_press"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_press_task"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/underline5"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/info_tv_long_press"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_regular"
                android:text="@string/long_press_a_task_to_update"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon_long_press" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>